Agregué diseño mas responsive

--- a/Contador/index.html
+++ b/Contador/index.html
@@ -8,6 +8,9 @@
     <title>Contador</title>
 </head>
 <body>
+    <div class="header">
+        <h1>Contador interactivo</h1>
+    </div>
     <div class="parent-div">
         <div class="contador">
             <div class="numero">
@@ -19,6 +22,7 @@
                 <button id="incremento" class="boton incremento">Incremento</button>
             </div>
         </div>
+        
        
     </div>
 </body>
